src/generic/bound/error.txt
BoundTest.java:12: error: incompatible types: String cannot be converted to Integer
        integerPair.setFirst("text");
                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
